Tests project added for all unit test cases